# itmo-training-courses

./: .gitignore  .gitmodules  LICENSE  README.md
blockchain/04-exchange-of-tokens-in-etherium/: IUniswapV2Factory.json
cpp-course/15-puzzle-solver/: CMakeLists.txt  README.md  main
cpp-course/bptree/: .gitmodules  CMakeLists.txt  README.md
cpp-course/bptree/include/: bptree.h  bptree_iterator.h  iterator.h
cpp-course/bptree/include/nodes/: abstract_node.h  internal_node.h  leaf_node.h
cpp-course/bptree/src/: main.cpp
cpp-course/lru-cache-with-buddy-allocator/: .gitignore  .gitmodules  CMakeLists.txt
cpp-course/market-data-handler/: CMakeLists.txt
cpp-course/uniq-utility/: CMakeLists.txt  README.md
data-analysis/01-preprocessing-practice/: 01-preprocessing.ipynb  02-curve-interpolation.ipynb  03-fast-histogram.ipynb
data-analysis/02-stock-price-prediction-by-sarima/: 01-stock-price-predictions.ipynb
data-analysis/03-prediction-of-restaurant-rating-by-k-neighbours-regression/: 01-make-prediction.ipynb
data-analysis/04-flat-price-prediction-by-linear-regression/: 00-eda.ipynb  01-modelling.ipynb
data-analysis/05-email-spam-filter-by-naive-bayes/: 01-modelling.ipynb
data-analysis/06-clustering-by-decision-trees-forests-and-ada-boost/: 01-modelling.ipynb
decoding/: README.md
decoding/sugiyama/: Makefile  input.txt  main.cpp
decoding/viterbi/: Makefile  main.cpp
history/: Synopsis.md
kgeorgiy-courses/dbms/: db.drawio
ml-advanced/: pyproject.toml
ml-advanced/notebooks/labs/: 01-batchnorm.ipynb  02-cnn.ipynb  03-nlp.ipynb  04-rl.ipynb  05-automl.ipynb
ml-advanced/notebooks/tasks/: 01-activation.ipynb  02-optimizers.ipynb
ml-advanced/notebooks/tasks/04-generation-svg-images-using-llms/Chat history/: ChatGPT.md  Code Gemma.md  CodeLlama.md  Deepseek Coder.md  Gemma 2.md  Gemma.md  Llama 3.2.md  Mistral.md  Phi 3.md  Stable Code.md  Starcoder.md
ml-advanced/notebooks/tasks/05-generation-resnet18-using-llms/Chat history/: ChatGPT.md  Code Gemma.md  CodeLlama.md  Deepseek Coder.md  Gemma 2.md  Gemma.md  Llama 3.2.md  Mistral.md  Phi 3.md  Stable Code.md  Starcoder.md
ml-advanced/notebooks/tasks/05-generation-resnet18-using-llms/Notebooks/: chatgpt.ipynb  codegemma.ipynb  codellama.ipynb  gemma.ipynb  gemma2.ipynb  llama 3.2.ipynb  mistral.ipynb  stable-code.ipynb
ml-advanced/src/mytorch/nn/: __init__.py  parameter.py
ml-advanced/src/mytorch/nn/modules/: __init__.py  activation.py  container.py  linear.py  loss.py  module.py
ml-advanced/src/mytorch/optim/: __init__.py  optimizer.py  sgd.py
operation-systems-lite/: Synopsis.md
rust/03-procedural-macro/: Cargo.toml
rust/03-procedural-macro/src/: lib.rs
rust/03-procedural-macro/tests/: 08-unrecognized-attribute.stderr
(+570 files in other folders)
